--- a/server/package.json
+++ b/server/package.json
@@ -8,22 +8,28 @@
     "build": "tsc",
     "start": "node dist/index.js"
   },
-  "keywords": ["logistics", "express", "typescript"],
+  "keywords": [
+    "logistics",
+    "express",
+    "typescript"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "@types/uuid": "^10.0.0",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.3.1",
-    "openai": "^4.20.0"
+    "express": "^4.18.2",
+    "openai": "^4.20.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
-    "typescript": "^5.3.3",
     "nodemon": "^3.0.2",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
-
