--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "openai": "^4.20.0",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "multer": "^1.4.5-lts.1",
+    "pdf-parse": "^1.1.1",
+    "mammoth": "^1.6.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -30,6 +33,8 @@
     "@types/node": "^20.10.0",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "@types/multer": "^1.4.12",
+    "@types/pdf-parse": "^1.1.3"
   }
 }
