--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-router-dom": "^6.30.1",
     "react-zoom-pan-pinch": "^3.7.0",
     "recharts": "^2.15.4",
+    "serverless-http": "^3.2.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
