--- a/netlify.toml
+++ b/netlify.toml
@@ -7,4 +7,14 @@
   node_bundler = "esbuild"
   external_node_modules = ["serverless-http"]
 
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/server/:splat"
+  status = 200
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
 
