--- a/netlify.toml
+++ b/netlify.toml
@@ -3,9 +3,20 @@
   publish = "dist"
   functions = "netlify/functions"
 
+[build.environment]
+  NODE_VERSION = "18"
+  NPM_FLAGS = "--legacy-peer-deps"
+  # Disable Next.js auto-detection
+  NETLIFY_NEXT_PLUGIN_SKIP = "true"
+
 [functions]
   node_bundler = "esbuild"
   external_node_modules = ["serverless-http"]
+
+# Explicitly disable Next.js plugin
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
+  enabled = false
 
 [[redirects]]
   from = "/api/*"
